# yieldguard

./: .gitignore  README.md  build.sh  package-lock.json  package.json  start-dev.sh
api/: index.py
backend/: .env.example  .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/src/models/: chat.py  recommendation.py
backend/src/services/: __init__.py  agent.py  ai_agent.py  analyzer.py  data_service.py  gas_fetcher.py  model_runner.py  yield_fetcher.py
backend/src/utils/: config.py
backend/test/: test_agent.py  test_analyzer.py
database/: schema.sql
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers-appkit.tsx  providers.tsx
frontend/src/components/: ChatInterface.tsx  StrategyInput.tsx  YieldDashboard.tsx  theme-toggle.tsx
frontend/src/contexts/: theme-context.tsx
frontend/src/lib/: api.ts
v0/: setup.sh
v0/backend/src/models/: recommendation.py
v0/backend/src/services/: __init__.py  ai_agent.py  xai_agent.py  yield_fetcher.py
v0/database/: schema.sql
v0/frontend/src/app/: page.tsx
v0/frontend/src/components/: StrategyInput.tsx  YieldDashboard.tsx  theme-toggle.tsx
