[project]
name = "yieldguard-lite"
version = "2.0.0"
description = "AI-Powered DeFi Yield Optimization"
requires-python = ">=3.11"

[tool.ruff]
# Ruff configuration - all-in-one linter + formatter
target-version = "py311"
line-length = 120
indent-width = 4

# Exclude common directories
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "env",
    ".env",
    "data",
    "*.pyc",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E402",   # Module level import not at top of file
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # Raise without from (not always wanted)
    "RUF001", # String contains ambiguous unicode
    "RUF002", # Docstring contains ambiguous unicode
    "RUF003", # Comment contains ambiguous unicode
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"test_*.py" = ["S101"]    # Assert OK in tests

[tool.ruff.format]
# Format configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
